unpackaged/main/default/objects/tspa__HistoryTechSeeConfig__c/tspa__HistoryTechSeeConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Having all the configurations for Visual Remote Assistant - Visual History Configuration</description>
    <label>Visual Remote Assistant - Visual History</label>
</CustomObject>