unpackaged/main/default/objects/tspa__HistoryTechSeeConfig__c/fields/tspa__Desktop_Sharing__c.field-meta.xml
<CustomField>
    <fullName>tspa__Desktop_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desktop Sharing</label>
    <type>Checkbox</type>
</CustomField>