unpackaged/main/default/objects/tspa__HistoryTechSeeConfig__c/fields/tspa__FaceMeet__c.field-meta.xml
<CustomField>
    <fullName>tspa__FaceMeet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FaceMeet</label>
    <type>Checkbox</type>
</CustomField>