unpackaged/main/default/objects/tspa__HistoryTechSeeConfig__c/fields/tspa__Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>tspa__Field_Api_Name__c</fullName>
    <label>Field Api Name</label>
    <type>TextArea</type>
</CustomField>