unpackaged/main/default/objects/tspa__HistoryTechSeeConfig__c/fields/tspa__Greek_Value__c.field-meta.xml
<CustomField>
    <fullName>tspa__Greek_Value__c</fullName>
    <label>Greek Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>