unpackaged/main/default/objects/tspa__HistoryTechSeeConfig__c/fields/tspa__Mirroring__c.field-meta.xml
<CustomField>
    <fullName>tspa__Mirroring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mirroring</label>
    <type>Checkbox</type>
</CustomField>