unpackaged/main/default/objects/tspa__HistoryTechSeeConfig__c/fields/tspa__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>tspa__Sort_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>