unpackaged/main/default/objects/tspa__HistoryTechSeeConfig__c/fields/tspa__Swedish__c.field-meta.xml
<CustomField>
    <fullName>tspa__Swedish__c</fullName>
    <label>Swedish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>