unpackaged/main/default/objects/tspa__HistoryTechSeeConfig__c/fields/tspa__Video_And_Audio__c.field-meta.xml
<CustomField>
    <fullName>tspa__Video_And_Audio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Video And Audio</label>
    <type>Checkbox</type>
</CustomField>