unpackaged/main/default/objects/tspa__HistoryTechSeeConfig__c/fields/tspa__Video_Application__c.field-meta.xml
<CustomField>
    <fullName>tspa__Video_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Video Application</label>
    <type>Checkbox</type>
</CustomField>