unpackaged/main/default/objects/tspa__HistoryTechSeeConfig__c/fields/tspa__Video_Session__c.field-meta.xml
<CustomField>
    <fullName>tspa__Video_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Video Session</label>
    <type>Checkbox</type>
</CustomField>