unpackaged/main/default/objects/tspa__HistoryTechSeeConfig__c/fields/tspa__Visual_Journey__c.field-meta.xml
<CustomField>
    <fullName>tspa__Visual_Journey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visual Journey</label>
    <type>Checkbox</type>
</CustomField>